# factplusplus

./: .gitignore  CMakeLists.txt  bitbucket-pipelines.yml
FaCT++/: AD.cpp  FaCT.cpp  comparser.h  comscanner.h  lispgrammar.h  parser.cpp  parser.h  scanner.cpp  scanner.h  xmlgrammar.h  xmlscanner.cpp  xmlscanner.h
FaCT++.C/: fact.cpp  fact.h  test.c
FaCT++.JNI/: Axioms.cpp  Expressions.cpp  FaCTPlusPlus.cpp  JNIActor.h  JNIMonitor.h  JNISupport.h  KnowledgeExploration.cpp  MemoryStat.cpp  MemoryStat.h  Modularity.cpp  Queries.cpp  SaveLoad.cpp  tJNICache.h
FaCT++.Java/: pom.xml
FaCT++.Maven/: pom.xml
Kernel/: Actor.cpp  Actor.h  AtomicDecomposer.cpp  AtomicDecomposer.h  BiPointer.h  Blocking.cpp  BuildDAG.cpp  CGLabel.h  CMakeLists.txt  CWDArray.cpp  CWDArray.h  CascadedCache.cpp  ConceptWithDep.h  DLConceptTaxonomy.cpp  DLConceptTaxonomy.h  DataReasoning.cpp  DataReasoning.h  DataTypeCenter.cpp  DataTypeCenter.h  DataTypeComparator.h  DeletelessAllocator.h  DepSet.h  ExtendedDataRange.cpp  ExtendedSyntacticLocalityChecker.h  GeneralSyntacticLocalityChecker.h  Incremental.cpp  Input.cpp  Kernel.cpp  Kernel.h  KnowledgeExplorer.cpp  KnowledgeExplorer.h  LeveLogger.cpp  LeveLogger.h  LocalityChecker.cpp  LocalityChecker.h  LogicFeature.cpp  LogicFeature.h  Modularity.h  ModuleMethod.h  ModuleType.h  (+131 more)
mavenreleaseowlapi4/: pom.xml
mavenreleaseowlapi4/src/test/java/conformancetests/: FixedTestCase.java  NewFeaturesTestCase.java  OWL2TestCase.java  WebOnt661.java  WebOntTestCase.java  WebOnt_AnnotationProperty_002_TestCase.java  (+1 more)
(+4 files in other folders)
